--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <testcontainers.version>1.17.4</testcontainers.version>
         <lombok.version>1.18.22</lombok.version>
         <java-jwt.version>4.0.0</java-jwt.version>
+        <itext.pdf.version>8.0.2</itext.pdf.version>
+        <springfox-boot-starter.version>3.0.0</springfox-boot-starter.version>
     </properties>
 
     <dependencies>
@@ -56,6 +58,11 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <!--MAIL-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
         <!--UNIT TESTS-->
         <dependency>
@@ -95,6 +102,19 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
+        </dependency>
+        <!-- ITEXT PDF -->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext7-core</artifactId>
+            <version>${itext.pdf.version}</version>
+            <type>pom</type>
+        </dependency>
+        <!-- SPRINGFOX http://localhost:8080/swagger-ui/index.html#/ -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>${springfox-boot-starter.version}</version>
         </dependency>
     </dependencies>
 
