--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,33 @@ spring:
     url: jdbc:h2:file:./enterprise-assistant-db
   jpa.hibernate:
     ddl-auto: update
+  mvc:
+    pathmatch:
+      matching-strategy: ANT_PATH_MATCHER
+  messages:
+    encoding: UTF-8
+  mail:
+    host: ${SMTP_HOST}
+    port: ${SMTP_PORT}
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+          socketFactory:
+            port: ${SMTP_PORT}
+            class: ${SOCKETFACTORY_CLASS}
 
 auth:
   jwt:
     expirationDays: 30
     secret: ${USER_SECRET}
     issuer: enterprise-assistant-service
+
+email:
+  sender:
+    from: ${MAIL_USERNAME}
+    subject: ${MAIL_SUBJECT}
