--- a/src/main/resources/companyData.properties
+++ b/src/main/resources/companyData.properties
@@ -1,4 +1,4 @@
-company.name=LuxeCraft Creations Sp. z o.o.
-company.address=ul. Grodzka 13a, 31-001 Kraków
-company.bankAccount.number=61109010140000071219812874
-company.taxId.number=1234567890
+company.name=Example Sp. z o.o.
+company.address=al. Krakowska X, xx-xxx Warszawa
+company.bankAccount.number=XXXXXXXXXXXXXXXXXXXXXXXXXX
+company.taxId.number=XXXXXXXXXX
